unpackaged/main/default/objects/pro_Rate_of_Pay_Details__c/pro_Rate_of_Pay_Details__c.object-meta.xml
<CustomObject>
    <label>Rate of Pay Details</label>
    <nameField>
        <displayFormat>SAL-{0000}</displayFormat>
        <label>Rate of Pay Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate of Pay Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>