unpackaged/main/default/objects/pro_Rate_of_Pay_Details__c/fields/pro_Changed_On__c.field-meta.xml
<CustomField>
    <fullName>pro_Changed_On__c</fullName>
    <description>AB 15/11/2023 - Prodigy</description>
    <label>Changed On</label>
    <type>Date</type>
</CustomField>