unpackaged/main/default/objects/pro_Rate_of_Pay_Details__c/fields/pro_Department__c.field-meta.xml
<CustomField>
    <fullName>pro_Department__c</fullName>
    <formula>TEXT( pro_Employee__r.Department__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>