unpackaged/main/default/objects/pro_Rate_of_Pay_Details__c/fields/pro_Effective_Date_of_Rate_of_Pay__c.field-meta.xml
<CustomField>
    <fullName>pro_Effective_Date_of_Rate_of_Pay__c</fullName>
    <description>AB 15/11/2023 - Prodigy</description>
    <label>Effective Date of Rate of Pay</label>
    <type>Date</type>
</CustomField>