unpackaged/main/default/objects/pro_Rate_of_Pay_Details__c/fields/pro_Employee__c.field-meta.xml
<CustomField>
    <fullName>pro_Employee__c</fullName>
    <description>AB 15/11/2023 - Prodigy</description>
    <label>Employee</label>
    <referenceTo>GlicW__Resource__c</referenceTo>
    <relationshipLabel>Rate of Pay Details</relationshipLabel>
    <relationshipName>Rate_of_Pay_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>