unpackaged/main/default/objects/pro_Rate_of_Pay_Details__c/fields/pro_Employee_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Employee_Start_Date__c</fullName>
    <formula>pro_Employee__r.GlicW__Contract_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Start Date</label>
    <type>Date</type>
</CustomField>