unpackaged/main/default/objects/pro_Rate_of_Pay_Details__c/fields/pro_Interval__c.field-meta.xml
<CustomField>
    <fullName>pro_Interval__c</fullName>
    <description>AB 15/11/2023 - Prodigy</description>
    <label>Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Year</fullName>
            </value>
            <value>
                <fullName>Per Hour</fullName>
            </value>
            <value>
                <fullName>Per Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>