unpackaged/main/default/objects/pro_Rate_of_Pay_Details__c/fields/pro_Is_Latest__c.field-meta.xml
<CustomField>
    <fullName>pro_Is_Latest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AB 14/12/2023 - Created by Prodigy</description>
    <label>Is Latest?</label>
    <type>Checkbox</type>
</CustomField>