unpackaged/main/default/objects/pro_Rate_of_Pay_Details__c/fields/pro_Notes__c.field-meta.xml
<CustomField>
    <fullName>pro_Notes__c</fullName>
    <description>AB 15/11/2023 - Prodigy</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>