unpackaged/main/default/objects/pro_Rate_of_Pay_Details__c/fields/pro_Office__c.field-meta.xml
<CustomField>
    <fullName>pro_Office__c</fullName>
    <formula>TEXT(pro_Employee__r.Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office</label>
    <type>Text</type>
</CustomField>