unpackaged/main/default/objects/pro_Rate_of_Pay_Details__c/fields/pro_Rate_of_Pay__c.field-meta.xml
<CustomField>
    <fullName>pro_Rate_of_Pay__c</fullName>
    <label>Rate of Pay</label>
    <length>10</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>