unpackaged/main/default/objects/pro_Rate_of_Pay_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>pro_Employee__c</columns>
    <columns>pro_Employee_Start_Date__c</columns>
    <columns>pro_Effective_Date_of_Rate_of_Pay__c</columns>
    <columns>pro_Changed_On__c</columns>
    <columns>pro_Rate_of_Pay__c</columns>
    <columns>pro_Interval__c</columns>
    <columns>pro_Notes__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>